--- a/LoveComingHome/app/src/main/res/values/strings.xml
+++ b/LoveComingHome/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="tab_menu_alert">提醒</string>
-    <string name="tab_menu_profile">信息</string>
-    <string name="tab_menu_pay">我的</string>
+    <string name="tab_menu_home">首页</string>
+    <string name="tab_menu_task">寻人</string>
+    <string name="tab_menu_alert">发布</string>
+    <string name="tab_menu_comment">消息</string>
+    <string name="tab_menu_my">我的</string>
     <string name="tab_menu_setting">设置</string>
 </resources>
