--- a/LoveComingHome/app/src/main/res/values/strings.xml
+++ b/LoveComingHome/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">LoveComingHome</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">助爱回家</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="tab_menu_home">首页</string>
@@ -15,12 +15,6 @@
     <drawable name="clr_pressed">#a44100</drawable>
     <drawable name="item_view_pressed">#808080</drawable>
 
-    <string-array name="ctype">
-        <item>电影</item>
-        <item>图书</item>
-        <item>音乐</item>
-        <item>游戏</item>
-    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
